// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxField when it is a button 1`] = `
<div
  className="ReactForm"
>
  <div
    className="boxField"
  >
    <input
      className="input foo"
      disabled={false}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      type="submit"
      value={undefined}
    />
    <div
      className="backdrop"
    />
  </div>
</div>
`;

exports[`BoxField with className 1`] = `
<div
  className="ReactForm"
>
  <div
    className="boxField"
  >
    <input
      className="input foo"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      placeholder={undefined}
      value=""
    />
    <div
      className="backdrop"
    />
  </div>
</div>
`;

exports[`BoxField with placeholder 1`] = `
<div
  className="ReactForm"
>
  <div
    className="boxField"
  >
    <input
      className="input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      placeholder="foo"
      value=""
    />
    <div
      className="backdrop"
    />
  </div>
</div>
`;

exports[`BoxField without optional props 1`] = `
<div
  className="ReactForm"
>
  <div
    className="boxField"
  >
    <input
      className="input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      placeholder={undefined}
      value=""
    />
    <div
      className="backdrop"
    />
  </div>
</div>
`;
